tests/models/snapshots/roles/can_find_by_id_1@roles.snap
---
source: tests/models/roles.rs
assertion_line: 56
expression: result
---
Ok(
    Role {
        id: 1,
        name: "admin",
        permissions: Json(
            Permission {
                permissions: 15,
            },
        ),
        description: Some(
            "Organization administrator with full access",
        ),
        created_at: DATE,
    },
)
