tests/models/snapshots/roles/can_find_by_id_2@roles.snap
---
source: tests/models/roles.rs
assertion_line: 56
expression: result
---
Ok(
    Role {
        id: 2,
        name: "manager",
        permissions: Json(
            Permission {
                permissions: 7,
            },
        ),
        description: Some(
            "Can manage farm operations and reports",
        ),
        created_at: DATE,
    },
)
