tests/models/snapshots/roles/can_find_by_id_3@roles.snap
---
source: tests/models/roles.rs
assertion_line: 56
expression: result
---
Ok(
    Role {
        id: 3,
        name: "staff",
        permissions: Json(
            Permission {
                permissions: 3,
            },
        ),
        description: Some(
            "Basic access to record data and view reports",
        ),
        created_at: DATE,
    },
)
