tests/models/snapshots/roles/permissions_admin@roles.snap
---
source: tests/models/roles.rs
assertion_line: 79
expression: "(can_read, can_write, can_delete, can_manage_users)"
---
(
    true,
    true,
    true,
    true,
)
